refactor: MemberCategory 로직 수정