@@ -1,8 +1,6 @@
 package soon.ready_action.domain.membercategory.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import soon.ready_action.domain.category.entity.Category;
@@ -25,17 +23,15 @@ public class MemberCategoryService {
     }
 
     private void saveMemberCategory(Member member, Category category) {
-        MemberCategory memberCategory = MemberCategory.builder()
-            .category(category)
-            .member(member)
-            .build();
+        MemberCategory memberCategory = MemberCategory.createMemberCategory(category, member);
         memberCategoryRepository.save(memberCategory);
     }
 
-    // 회원이 속한 카테고리 리스트 반환
     public List<Category> getCategoriesByMemberId(Long memberId) {
-        return memberCategoryRepository.findByMemberId(memberId).stream()
-                .map(MemberCategory::getCategory)
-                .collect(Collectors.toList());
+        List<MemberCategory> memberCategories = memberCategoryRepository.findByMemberId(memberId);
+
+        return memberCategories.stream()
+            .map(MemberCategory::getCategory)
+            .toList();
     }
 }
